# audit-mind-ai

./: .env.example  .gitignore  DOCUMENTACAO.md  Makefile  README.md  SECURITY.md  app.py  package-lock.json  pyproject.toml  requirements.txt
.githooks/: pre-commit
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  FRONTEND_SPEC.md  ROADMAP.md  SPEC.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: ChatDock.tsx  ClarifyForm.tsx  FindingCard.tsx  FolderPicker.tsx  HealthStamp.tsx  History.tsx  ResultsPanel.tsx  StartForm.tsx  Timeline.tsx
frontend/src/state/: auditReducer.test.ts  auditReducer.ts  score.test.ts  score.ts
src/auditor/: __init__.py  cli.py  config.py  graph.py  llm.py  logging_config.py  state.py
src/auditor/api/: __init__.py  deps.py  main.py  routes.py  runner.py  schemas.py  store.py
src/auditor/nodes/: __init__.py  adversarial.py  audit.py  clarify.py  discovery.py  planning.py  report.py  synthesis.py  verify.py
src/auditor/prompts/: __init__.py  templates.py
src/auditor/report/: __init__.py  renderer.py  sarif.py
src/auditor/report/templates/: report.html.j2
src/auditor/tools/: __init__.py  filesystem.py  project.py
tests/: test_adversarial.py  test_api.py  test_audit.py  test_sarif.py  test_smoke.py  test_verify.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/audits/[id]/: page.tsx
web/components/: Dashboard.tsx  NewAuditForm.tsx
web/lib/: api.ts
